# schulte

./: .gitignore  404.html  LICENSE  README.md  index.html  manifest.webmanifest  package-lock.json  package.json  registerSW.js  sw.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: debug-release.yml  deploy.yml  release.yml
assets/: About-C_icxMcf.js  History-B9e_DJlW.css  History-CLRx_weu.js  Home-BHkfaq2J.js  Play-v2R16CdR.js  Settings-4Vs6fNNl.js  history-Cs9F0ysq.js  index-BmCdye3a.css  index-CpFvtyXt.js  mode-Bx1zWrFI.js
docs/: wechat-miniprogram.md
docs/competition/: 01-registration-post.md  02-demo-post.md  CHECKLIST.md  build-html.mjs  capture.mjs  creative-proposal.html  scenarios.mjs  static-server.mjs
miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json  sitemap.json
miniprogram/pages/index/: index.js  index.json  index.wxml  index.wxss
scripts/: build-windows.bat  generate-icons.mjs  generate-tauri-icons.mjs  open-miniprogram.mjs
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/i18n/: index.ts
src/i18n/locales/: en-US.ts  zh-CN.ts
src/router/: index.ts
src/stores/: game.ts  history.ts  settings.ts
src/types/: index.ts
src/utils/: colorPalette.ts  db.ts  eyeCare.ts  mode.ts  rating.ts  shuffle.ts  sound.ts
src/utils/__tests__/: cellStyleShape.test.ts  (+7 more)
src/views/: About.vue  History.vue  Home.vue  Play.vue  Settings.vue
