[package]
name = "schulte-app"
version = "0.1.0"
description = "Cross-platform Schulte Grid attention training app"
authors = ["Schulte App"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "schulte_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
